--- a/www/templates/customer/feedback.html
+++ b/www/templates/customer/feedback.html
@@ -6,9 +6,10 @@
     <ion-content class="padding">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
         <div class="list">
-            <ion-item class="item" ng-repeat="item in customerFeedbacks">
-                <span class="item-note date-time">{{ item.created_at | date:"MMM-yyyy" }}</span>
-                <p><span class="strong color-positive">Rate:</span> {{ item.rate }} </p>
+            <ion-item class="item item-avatar item-text-wrap" ng-repeat="item in customerFeedbacks">
+                <div class="item-char">{{$index+1}}</div>
+                <span class="item-note date-time text-right">{{ item.created_at | asDate | date: APP_CONFIG.FORMAT.DATE }}<br/>{{ item.created_at | asDate | date: APP_CONFIG.FORMAT.TIME }}</span>
+                <p><span class="strong color-positive">Rate:</span> <star-rating ng-model="item.rate" readonly="rating.isReadonly"></star-rating></p>
                 <p><span class="strong color-positive">Service:</span> {{ item.service }} / <span class="strong color-positive">Employee:</span> {{ item.employee }}</p>
                 <p>{{ item.content }}</p>
             </ion-item>
