--- a/www/templates/partial/feedback-tmp.html
+++ b/www/templates/partial/feedback-tmp.html
@@ -1,8 +1,8 @@
 <ion-modal-view>
     <ion-header-bar class="icon-left">
-        <div class="title"><i class="icon ion-edit"></i> Create Note</div>
+        <div class="title"><i class="icon ion-edit"></i> Create Feedback</div>
     </ion-header-bar>
-    <ion-content class="padding">
+    <ion-content class="padding" has-header="true" has-footer="true">
         <form>
             <div class="list list-inset">
                 <div class="item range" ng-class="ratingClass">
@@ -13,24 +13,26 @@
             </div>
             <div class="list list-inset">
                 <label class="item item-input">
-                    <input type="text" placeholder="Service" ng-model="feedbackData.service" auto-focus=""/>
+                    <input type="text" placeholder="Service name" ng-model="feedbackData.service" auto-focus=""/>
                 </label>
             </div>
             <div class="list list-inset">
                 <label class="item item-input">
-                    <input type="text" placeholder="Employee" ng-model="feedbackData.employee"/>
+                    <input type="text" placeholder="Employee name" ng-model="feedbackData.employee"/>
                 </label>
             </div>
             <div class="list list-inset">
                 <label class="item item-input">
-                    <textarea placeholder="Comments" rows="8" ng-model="feedbackData.content"></textarea>
+                    <textarea placeholder="Type here your commentd" rows="8" ng-model="feedbackData.content"></textarea>
                 </label>
-            </div>
-            <div class="button-bar">
-                <button class="button button-positive" ng-click="closeModal()">Cancel</button>
-                <button class="button button-positive" ng-click="saveFeedback()">Save</button>
             </div>
             <br/>
         </form>
     </ion-content>
+    <ion-footer-bar class="bar bar-footer">
+        <div class="button-bar">
+            <button class="button button-positive button-outline" ng-click="closeModal()">Cancel</button>
+            <button class="button button-positive button-outline" ng-click="saveFeedback()">Save</button>
+        </div>
+    </ion-footer-bar>
 </ion-modal-view>
