--- a/www/css/style.css
+++ b/www/css/style.css
@@ -101,7 +101,7 @@
 /************ QR Code****************/
 .card-circle {
   border: 10px solid #ff3b30;
-  padding: 10px;
+  padding: 20px;
   border-radius: 999em; }
   .card-circle #qrcode {
     display: inline-block; }
@@ -162,28 +162,51 @@
   line-height: 2.1em;
   vertical-align: middle; }
 
-#map_canvas {
+.around-pane #map_canvas {
   width: 100%;
   height: 100%;
   margin: 0;
   position: relative; }
-  #map_canvas .angular-google-map-container {
+  .around-pane #map_canvas .angular-google-map-container {
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0; }
+.around-pane .form-address {
+  padding-right: 36px !important; }
+.around-pane .form-radius {
+  z-index: 1000;
+  right: 40px !important;
+  width: 80px; }
 
 /************* slider *************/
 .slider {
   width: 100%;
-  height: 400px;
+  min-height: 300px;
   border: 5px solid #FFF; }
-  .slider .slider-slide .desc {
-    background: rgba(0, 0, 0, 0.5);
+  .slider .slider-slide img {
+    max-height: 500px; }
+  .slider .slider-slide .off {
+    background: rgba(255, 0, 0, 0.9);
     position: absolute;
-    width: 100%;
-    padding: 10px;
-    bottom: 0;
-    height: 80px;
+    font-size: 2em;
+    width: auto;
+    padding: 20px;
+    top: 0;
+    right: 0;
     color: #fff; }
+
+/************** Star rating ***************/
+.star-rating {
+  margin: 0;
+  padding: 0;
+  display: inline-block; }
+  .star-rating .star {
+    padding: 1px;
+    color: #fd0;
+    font-size: 20px;
+    text-shadow: .05em .05em #aaa;
+    list-style-type: none;
+    display: inline-block;
+    cursor: pointer; }
