--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -23,7 +23,7 @@
                     Remember me?
                 </div>
             </div>
-            <button class="button button-block button-positive" ng-click="login()">Login</button>
+            <button class="button button-block button-positive" ng-click="login()">Sign In</button>
             <div class="button-bar">
                 <button class="button button-outline button-positive" ng-click="authenticate('facebook')">with Facebook</button>
                 <button class="button button-outline button-positive" ng-click="authenticate('google')">with Google</button>
