--- a/www/templates/owner/offer.html
+++ b/www/templates/owner/offer.html
@@ -6,31 +6,31 @@
         <button class="button button-stable" ng-click="openModal()"><i class="ion ion-plus"></i></button>
     </ion-nav-buttons>
     <ion-content class="tabbed-content-within-sidemenu-app padding" has-header="true">
-        <div class="container">
-            <div class="list card">
-                <ion-slide-box on-slide-changed="slideHasChanged($index)">
-                    <ion-slide ng-repeat="offer in offers">
-						<div class="desc">
-							<h2 class=""> {{ offer.subject }}</h2>
-							<div class="pull-right"> at {{offer.start_time | asDate | date:"MMM-dd-yyyy"}} - {{offer.end_time | asDate | date:"MMM-dd-yyyy"}} </div>
-							<div class="off">{{offer.off}} {{offer.off_type}}</div>
-							<div>{{offer.content}}</div>
-						</div>
-                        <img class="clear" ng-src="http://localhost:8000/{{ offer.file_url }}" alt="Offer" width="100%"/>
-                    </ion-slide>
-                </ion-slide-box>
+        <div class="list">
+            <div ng-repeat="offer in offers">
+                <ion-item class="item" ng-click="toggleGroup(offer)" ng-class="{active: isGroupShown(offer)}">
+                    <i class="icon" ng-class="isGroupShown(offer)? 'ion-android-arrow-dropdown' : 'ion-android-arrow-dropright'"></i>
+                    <span class="strong color-positive"> {{ offer.subject }}</span>
+                    <div class="pull-right"> at {{offer.start_time | date:"MMM-yyyy"}} - {{offer.end_time | date:"MMM-yyyy"}} </div>
+                </ion-item>
+                <ion-item class="item-accordion" ng-show="isGroupShown(offer)">
+                    <img class="clear" ng-src="{{ offer.file_url }}" alt="Offer" width="100%"/>
+                    <div>{{offer.content}}</div>
+                </ion-item>
             </div>
         </div>
     </ion-content>
-    <ion-tabs class="tabs-icon-top tabs-light">
-        <ion-tab title="Home" class="assertive" icon="ion-home" href="#/owner/dash">
-            <ion-nav-view name="dash-tab"></ion-nav-view>
-        </ion-tab>
-        <ion-tab title="Customer" class="energized" icon="ion-person" href="#/owner/customer">
-            <ion-nav-view name="customer-tab"></ion-nav-view>
-        </ion-tab>
-        <ion-tab title="Offer" class="balanced" icon="ion-pricetags" href="#/owner/offer">
-            <ion-nav-view name="offer-tab"></ion-nav-view>
-        </ion-tab>
-    </ion-tabs>
+    <ion-footer-bar>
+        <ion-tabs class="tabs-icon-top tabs-light">
+            <ion-tab title="Home" class="assertive" icon="ion-home" href="#/owner/dash">
+                <ion-nav-view name="dash-tab"></ion-nav-view>
+            </ion-tab>
+            <ion-tab title="Customer" class="energized" icon="ion-person" href="#/owner/customer">
+                <ion-nav-view name="customer-tab"></ion-nav-view>
+            </ion-tab>
+            <ion-tab title="Offer" class="balanced" icon="ion-pricetags" href="#/owner/offer">
+                <ion-nav-view name="offer-tab"></ion-nav-view>
+            </ion-tab>
+        </ion-tabs>
+    </ion-footer-bar>
 </ion-view>
