fix bug hide processing, and change layout owner

--- a/www/templates/customer/dashboard.html
+++ b/www/templates/customer/dashboard.html
@@ -13,7 +13,7 @@
                 </div>
                 <h4 class="strong">{{userProfile.code}}</h4>
                 <button class="button button-block button-outline icon-left ion-android-list button-positive" ui-sref="customer.note">Note</button>
-                <button class="button button-block button-outline icon-left ion-android-checkmark-circle button-positive" ng-show="userProfile.store_id" ui-sref="customer.info">Place : </button>
+                <button class="button button-block button-outline icon-left ion-android-checkmark-circle button-positive" ng-show="userProfile.store_id" ui-sref="customer.info">Place</button>
                 <p ng-hide="userProfile.store_id">
                     You don't have any favourite place, click <span class="energized">Around tab</span> to choose your favourite spa.
                 </p>
