--- a/www/templates/owner/dash.html
+++ b/www/templates/owner/dash.html
@@ -16,6 +16,7 @@
 			<div class="col">
 				<div class="card">
 					<div class="item item-avatar">
+						<div class="item-pull-left"><span class="ion-person"></span></div>
 						<h2>Customer</h2>
 						<p>Total</p>
 					</div>
@@ -27,6 +28,7 @@
 			<div class="col">
 				<div class="card">
 					<div class="item item-avatar">
+						<div class="item-pull-left"><span class="ion-star"></span></div>
 						<h2>Rate</h2>
 						<p>Average</p>
 					</div>
@@ -40,6 +42,7 @@
 			<div class="col">
 				<div class="card">
 					<div class="item item-avatar">
+						<div class="item-pull-left"><span class="ion-pricetags"></span></div>
 						<h2>Offer</h2>
 						<p>Total offer</p>
 					</div>
@@ -51,6 +54,7 @@
 			<div class="col">
 				<div class="card">
 					<div class="item item-avatar">
+						<div class="item-pull-left"><span class="ion-arrow-graph-up-right"></span></div>
 						<h2>Report</h2>
 						<p>Total offer</p>
 					</div>
