--- a/www/templates/partial/direction-tmp.html
+++ b/www/templates/partial/direction-tmp.html
@@ -1,6 +1,6 @@
 <ion-popover-view>
     <ion-header-bar>
-        <div class="title">Direction path length: {{ mapDirection.path_length }} (mi)</div>
+        <div class="title">Distance: {{ mapDirection.path_length }} (mi)</div>
     </ion-header-bar>
     <ion-content>
         <div id="directionsPanel"></div>
