--- a/www/templates/public.html
+++ b/www/templates/public.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Public" name="public-view">
+<ion-view view-title="Processing" name="public-view">
     <ion-nav-bar class="bar-positive"></ion-nav-bar>
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
@@ -7,7 +7,7 @@
         <button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
     </ion-nav-buttons>
     <ion-content class="padding">
-        <h3 class="title text-center"> Welcome to Offer colla</h3>
-        <p>This page is public page</p>
+        <h2 class="title text-center"> Welcome to Myspa247</h2>
+        <p>Waiting...</p>
     </ion-content>
 </ion-view>
