--- a/scss/style.scss
+++ b/scss/style.scss
@@ -195,6 +195,23 @@ $ion-img-path: "../img" !default;
     }
   }
 }
+.card{
+  .item-pull-left{
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    max-width: 40px;
+    max-height: 40px;
+    width: 100%;
+    height: 100%;
+    background: none;
+    color: $positive;
+    text-align: center;
+    font-size: 1.4em;
+    line-height: 2.1em;
+    vertical-align: middle;
+  }
+}
 .around-pane {
   #map_canvas {
     width: 100%;
