--- a/www/templates/customer/policy.html
+++ b/www/templates/customer/policy.html
@@ -9,6 +9,6 @@
         <br/>
         Fusce felis tortor, porta sed est vel, pellentesque consequat magna. Vivamus ultrices, felis a dignissim venenatis, mauris mauris rhoncus lorem, eget euismod sapien sem aliquam lacus. Donec in lacus eu nunc laoreet semper.<br/>
         <br/>
-        <button class="button button-fullwidth" nav-clear ui-sref="main.dash">Ok, back</button>
+        <button class="button button-fullwidth" nav-clear ui-sref="customer.dash">Ok, back</button>
     </ion-content>
 </ion-view>
